--- a/static/index.html
+++ b/static/index.html
@@ -178,6 +178,12 @@
 				</div>
 			</span>
 			<span class="input-control">
+				<div id="popup-disable" class="ui checkbox">
+					<label>Disable Status Popups</label>
+					<input id="popup-disable-input" type="checkbox"  tabindex="0" class="hidden">
+				</div>
+			</span>
+			<span class="input-control">
 				<span class="input-title">Set Strike Time</span>
 			<div class="ui input">
 				<input type="time" step="60" id="time-picker">
@@ -278,9 +284,9 @@
 		<div id="news-message" class="ui message">
 			<i class="close icon"></i>
 			<div class="header">
-				News - 3/06/2018
+				News - 4/25/2018
 			</div>
-			<p>I added a thing where is someone tries a raid and its full or over, then its going to reflect on everyone's screen hopefully so that you can tell if its full/over before you click on it. PLEASE be patient with me if this gets weird.</p>
+			<p>Added Unite and Fight raids. The wiki doesn't have the Japanese raid names for the two lower Behemoths, so I did not add them yet. Sorry for the delay, had surprise exams that I had to study for and was basically sequestered from the internet for a few days.</p>
 		</div>
 	</div>
 	<script type="text/javascript">
